Added CSS and contact.html

--- a/index.html
+++ b/index.html
@@ -3,24 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>The Family Island</title>
   </head>
   <body>
-    <header><h1>Welcome to the Family Island Game Club</h1></header>
+    <header><h1>Welcome to the Family Island Game Club!</h1></header>
     <section class="cover">
-      <img src="images/island_cover" alt="family island cover" />
-      <h2>Welcome to the Family Island Game Club!</h2>
+      <img
+        src="images/island_cover.png"
+        alt="family island cover"
+        class="cover"
+      />
+      <h2 class="welcome">Welcome!</h2>
     </section>
     <nav>
-      <ul>
+      <ul class="navigation">
         <li><a href="index.html#join">Join the Club</a></li>
-        <li><a href="#">About the Game</a></li>
-        <li><a href="#">Contact</a></li>
+        <li>
+          <a
+            href="https://play.google.com/store/apps/details?id=com.MelsoftGames.FamilyIslandFarm&hl=pl&gl=US"
+            >Download the Game</a
+          >
+        </li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <main>
       <div class="text_section">
-        <h4>Hi Friend!</h4>
+        <h3>Hi Friend!</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut porta
           tellus. Integer sed volutpat metus, non consequat quam. Duis tempor
@@ -38,8 +48,8 @@
         </p>
       </div>
       <ul class="pictures">
-        <li><img src="images/screenshot_1" alt="game screenshot" /></li>
-        <li><img src="images/screenshot_2" alt="game screenshot" /></li>
+        <li><img src="images/screenshot_1.jpg" alt="game screenshot" /></li>
+        <li><img src="images/screenshot_2.png" alt="game screenshot" /></li>
       </ul>
     </main>
     <section class="join" id="join">
