Updated images and form styling

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li>
           <a
             href="https://play.google.com/store/apps/details?id=com.MelsoftGames.FamilyIslandFarm&hl=pl&gl=US"
+            target="_blank"
             >Download the Game</a
           >
         </li>
@@ -48,14 +49,38 @@
         </p>
       </div>
       <ul class="pictures">
-        <li><img src="images/screenshot_1.jpg" alt="game screenshot" /></li>
-        <li><img src="images/screenshot_2.png" alt="game screenshot" /></li>
+        <li>
+          <img src="images/screenshot_1.jpg" alt="game screenshot" />
+        </li>
+        <li>
+          <img src="images/screenshot_3.jpg" alt="game screenshot" />
+        </li>
       </ul>
+      <p class="text_sectio">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut porta
+        tellus. Integer sed volutpat metus, non consequat quam. Duis tempor
+        justo et dui faucibus tristique. Etiam sed aliquam odio. Vestibulum vel
+        congue justo. Fusce in libero vel sapien maximus fringilla. Donec id
+        tellus convallis, faucibus augue id, consequat arcu. Praesent tristique
+        luctus ex, at bibendum quam malesuada ac. Morbi imperdiet, enim nec
+        venenatis ultrices, nisl magna porta enim, at faucibus urna mauris et
+        massa. Nulla tempor, diam ut accumsan aliquam, nunc ante venenatis est,
+        ultricies tempor sapien nisl sed sem. Quisque mi velit, consequat
+        porttitor vestibulum non, mattis id augue. Aliquam id volutpat est.
+        Donec efficitur sapien in fermentum vulputate. Praesent eu mattis sem.
+        Aliquam ultrices tellus eu auctor consequat. Pellentesque pulvinar
+        congue ultricies.
+      </p>
     </main>
     <section class="join" id="join">
       <form>
-        <input type="email" placeholder="Type your email here" required />
-        <input type="submit" value="Join the Club Today!" />
+        <input
+          type="email"
+          class="email"
+          placeholder="Type your email here"
+          required
+        />
+        <input type="submit" class="submit" value="Join the Club Today!" />
       </form>
     </section>
     <footer><p>Coded by Angelika Czerwińska</p></footer>
